--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "author": "Jean-Baptiste WATENBERG",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@grafana/data": "latest",
-    "@grafana/toolkit": "latest",
-    "@grafana/ui": "latest"
+    "@grafana/data": "^6.6.2",
+    "@grafana/toolkit": "^6.6.2",
+    "@grafana/ui": "^6.6.2"
   }
 }
